[package]
name = "imp"
version = "0.1.0"
authors = ["jonny rhea <jonny.rhea@consensys.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml"
]


[dependencies]
network = { path = "network", package="imp-network"}
p2p = { path = "network/p2p", package="imp-p2p"}
agent = { path = "agent", package="imp-agent"}
datatypes = { path = "datatypes", package="imp-datatypes"}

tokio = { version = "0.2", features = ["full"] }
slog = { version = "^2.2.3" , features = ["max_level_trace"] }
target_info = "0.1.0"
clap = "2.33.0"
error-chain = "0.12.1"
futures = "0.3"
ctrlc = { version = "3.1.1", features = ["termination"] }

[patch.crates-io]
tree_hash = { git = "https://github.com/sigp/lighthouse", rev = "d7e29382967c16a7a4ce73d1672867523287402b", package = "tree_hash" }
tree_hash_derive = { git = "https://github.com/sigp/lighthouse", rev = "d7e29382967c16a7a4ce73d1672867523287402b", package = "tree_hash_derive" }
eth2_ssz = { git = "https://github.com/sigp/lighthouse", rev = "d7e29382967c16a7a4ce73d1672867523287402b", package = "eth2_ssz" }
eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse", rev = "d7e29382967c16a7a4ce73d1672867523287402b", package = "eth2_ssz_derive" }
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse", rev = "d7e29382967c16a7a4ce73d1672867523287402b", package = "eth2_ssz_types" }
types = { git = "https://github.com/sigp/lighthouse", rev = "d7e29382967c16a7a4ce73d1672867523287402b", package = "types" }
eth2_hashing = { git = "https://github.com/sigp/lighthouse", rev = "d7e29382967c16a7a4ce73d1672867523287402b", package = "eth2_hashing" }
eth2-libp2p = { git = "https://github.com/sigp/lighthouse", rev = "d7e29382967c16a7a4ce73d1672867523287402b", package = "eth2-libp2p", optional = true }

