[package]
name = "imp"
version = "0.1.0"
authors = ["jonny rhea <jonny.rhea@consensys.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[features]
default = []
local = ["p2p/local"]


[dependencies]
network = { path = "network", package="imp-network"}
p2p = { path = "network/p2p", package="imp-p2p"}
agent = { path = "agent", package="imp-agent"}
types = { path = "types", package="imp-types"}
utils = { path = "utils", package="imp-utils"}
eth2 = { path = "eth2", package="imp-eth2"}

tokio-02 = { version = "0.2", features = ["full"], package = "tokio" }
tokio-01 = { version = "0.1.22", package = "tokio"}
tokio-compat = { version = "0.1.5", features = ["rt-full"] }
slog = { version = "2.5.2" , features = ["max_level_trace"] }
target_info = "0.1.0"
clap = "2.33.0"
error-chain = "0.12.1"
futures = "0.3"
dirs = "2.0.2"


[patch.crates-io]
tree_hash = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "tree_hash" }
tree_hash_derive = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "tree_hash_derive" }
eth2_ssz = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2_ssz" }
eth2_ssz_derive = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2_ssz_derive" }
eth2_ssz_types = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2_ssz_types" }
eth2-types = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "types" }
eth2_hashing = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2_hashing" }
eth2-libp2p = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2-libp2p" }
eth2_config = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2_config" }
eth2_testnet_config = { git = "https://github.com/jrhea/lighthouse", rev = "7259d2bd5630e218186bfc877fd69c72427f21a1", package = "eth2_testnet_config" }

#c5416fa11646d68106107b902486840054d0daa6
#[patch."https://github.com/prrkl/mothra.git"]
#mothra = { git = "https://github.com/prrkl/mothra", rev= "c5416fa11646d68106107b902486840054d0daa6", package = "mothra", optional = true }