[package]
name = "imp-agent"
version = "0.1.0"
authors = ["jonny rhea <jonathan.rhea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network = { path = "../network", package="imp-network"}
tokio = { version = "0.2", features = ["full"] }