[package]
name = "imp-network"
version = "0.1.0"
authors = ["jonny rhea <jonny.rhea@consensys.com>"]
edition = "2018"


[dependencies]
p2p = { path = "p2p", package="imp-p2p"}
types = { path = "../types", package="imp-types"}
tokio-compat = { version = "0.1.5", features = ["rt-full"] }
tokio = { version = "0.2", features = ["full"], package = "tokio" }
clap = "2.33.0"
futures = "0.3"
slog = { version = "2.5.2" , features = ["max_level_trace"] }