[package]
name = "imp-network"
version = "0.1.0"
authors = ["jonny rhea <jonny.rhea@consensys.com>"]
edition = "2018"


[dependencies]
p2p = { path = "p2p", package="imp-p2p"}
types = { path = "../types", package="imp-types"}
tokio = { version = "0.2.21", features = ["full"], package = "tokio" }
exit-future = "0.2.0"
clap = "2.33.0"
futures = "0.3.5"
slog = { version = "2.5.2" , features = ["max_level_trace"] }