[package]
name = "imp-p2p"
version = "0.1.0"
authors = ["jonny rhea <jonny.rhea@consensys.com>"]
edition = "2018"

[features]
default = ["mothra","discv5"]
local = ["mothra_local","discv5_local"]

[dependencies]
discv5 = { version = "0.1.0-alpha.5", features=["libp2p"], optional = true }
discv5_local = { path = "../../../discv5", features=["libp2p"], package="discv5", optional = true }
eth2 = { path = "../../eth2", package="imp-eth2"}
types = { path = "../../types", package="imp-types"}
utils = { path = "../../utils", package="imp-utils"}
mothra = { git = "https://github.com/prrkl/mothra", branch = "master", package = "mothra", optional = true }
mothra_local = { path = "../../../mothra/core", package = "mothra", optional = true }

tokio = { version = "0.2.21", features = ["full"], package = "tokio" }
slog = { version = "2.5.2" , features = ["max_level_trace"] }
target_info = "0.1.0"
clap = "2.33.0"
futures = "0.3.5"
exit-future = "0.2.0"
hex = "0.3"
csv = "1.1.3"
serde_derive = "1.0.106"
serde = "1.0.106"
chrono = "0.4.11"
dirs = "2.0.2"
rand = "0.7.3"
snap = "1.0.0"
bs58 = "0.2.0"

[dependencies.libp2p]
git = "https://github.com/sigp/rust-libp2p"
rev = "a6232506278b9e686248f8d04b79400861b143c2"
default-features = false
features = ["websocket", "identify", "mplex", "yamux", "noise", "gossipsub", "dns", "secio", "tcp-tokio"] 
