[package]
name = "imp-p2p"
version = "0.1.0"
authors = ["jonny rhea <jonny.rhea@consensys.com>"]
edition = "2018"

[features]
default = ["mothra"]
local = ["mothra_local"]

[dependencies]
discv5 = { git = "https://github.com/jrhea/discv5.git", rev = "37b87f6cc53c8fc695d9b0afc141634916a3a201", features = ["libp2p"] }
eth2 = { path = "../../eth2", package="imp-eth2"}
types = { path = "../../types", package="imp-types"}
utils = { path = "../../utils", package="imp-utils"}
mothra = { git = "https://github.com/prrkl/mothra", branch = "master", package = "mothra", optional = true }
mothra_local = { path = "../../../mothra/core", package = "mothra", optional = true }

tokio = { version = "0.2.21", features = ["full"], package = "tokio" }
slog = { version = "2.5.2" , features = ["max_level_trace"] }
target_info = "0.1.0"
clap = "2.33.0"
futures = "0.3.5"
exit-future = "0.2.0"
hex = "0.3"
csv = "1.1.3"
serde_derive = "1.0.106"
serde = "1.0.106"
chrono = "0.4.11"
dirs = "3.0.1"
rand = "0.7.3"
snap = "1.0.0"
bs58 = "0.2.0"
