[package]
name = "utils"
version = "0.1.0"
authors = ["jonny rhea <jonathan.rhea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p =  { git = "https://github.com/jrhea/rust-libp2p", rev = "f75a1d6e2ea696ee59b9d89328eee68eadca2524", package = "libp2p"}
eth2 = { path = "../../eth2", package="imp-eth2"}