[package]
name = "mock-node"
version = "0.1.0"
authors = ["jonny rhea <jonny.rhea@consensys.com>"]
edition = "2018"
description = "Spawns a mock eth2 node"

[features]
default = []
local = ["p2p/local","eth2/local"]

[dependencies]
types = { path = "../../types", package="imp-types"}
utils = { path = "../../utils", package="imp-utils"}
p2p = { path = "../../network/p2p", package="imp-p2p"}
eth2 = { path = "../../eth2", package="imp-eth2"}

tokio = "0.1.22"
tokio-compat = { version = "0.1.5", features = ["rt-full"] }
slog = { version = "2.5.2" , features = ["max_level_trace"] }
target_info = "0.1.0"
clap = "2.33.0"

[patch.crates-io]
tree_hash = { git = "https://github.com/sigp/lighthouse", rev = "19b8c5a9e01a4e814533fa68127e67e3c0afa6cf", package = "tree_hash" }
tree_hash_derive = { git = "https://github.com/sigp/lighthouse", rev = "19b8c5a9e01a4e814533fa68127e67e3c0afa6cf", package = "tree_hash_derive" }
eth2_ssz = { git = "https://github.com/sigp/lighthouse", rev = "19b8c5a9e01a4e814533fa68127e67e3c0afa6cf", package = "eth2_ssz" }
eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse", rev = "19b8c5a9e01a4e814533fa68127e67e3c0afa6cf", package = "eth2_ssz_derive" }
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse", rev = "19b8c5a9e01a4e814533fa68127e67e3c0afa6cf", package = "eth2_ssz_types" }
eth2-types = { git = "https://github.com/sigp/lighthouse", rev = "19b8c5a9e01a4e814533fa68127e67e3c0afa6cf", package = "types" }
eth2_hashing = { git = "https://github.com/sigp/lighthouse", rev = "19b8c5a9e01a4e814533fa68127e67e3c0afa6cf", package = "eth2_hashing" }
eth2-libp2p = { git = "https://github.com/sigp/lighthouse", rev = "19b8c5a9e01a4e814533fa68127e67e3c0afa6cf", package = "eth2-libp2p", optional = true }
eth2_config = { git = "https://github.com/sigp/lighthouse", rev = "19b8c5a9e01a4e814533fa68127e67e3c0afa6cf", package = "eth2_config" }
