[package]
name = "discovery"
version = "0.1.0"
authors = ["jonny rhea <jonathan.rhea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p =  { git = "https://github.com/jrhea/rust-libp2p", rev = "f75a1d6e2ea696ee59b9d89328eee68eadca2524", package = "libp2p"}
futures = "0.1"
bytes = "0.4"
lazy_static = "1.2"
parking_lot = "0.9.0"
smallvec = "0.6"
env_logger = "0.7.1"
tokio = "0.1"
tokio-stdin-stdout = "0.1"
tokio-codec = "0.1"
tokio-executor = "0.1"
tokio-io = "0.1"
wasm-timer = "0.1"
